Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15855

Return -ENOKEY to encrypt-unaware clients if filename is missing

XMLWordPrintable

    • 3
    • 9223372036854775807

      Applications that check for the existence of a file normally get -ENOENT when the filename does not exist.
      To reduce issues with applications running on clients without keys or without fscrypt support that check for the existence of a file in an encrypted directory, we could return -ENOKEY in the case the filename is missing. That would at least catch applications that are looking for -ENOENT when trying to check if a file already exists.

            sebastien Sebastien Buisson
            sebastien Sebastien Buisson
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: